# CParkour

./: README.md  实验报告.docx
Project/: CMakeLists.txt  Coin.cpp  Coin.h  Config.h  DogItem.cpp  DogItem.h  Entity.h  GAME.md  MainWindow.cpp  MainWindow.h  Obstacle.cpp  Obstacle.h  Platform.cpp  Platform.h  README.md  README_CHANGES.md  game.cpp  main.cpp  resources.qrc
